New scalar keyframes between two keyframes should now self assign to interpolated value.

More work can be done here in the future for getting proper interpolation "handles" based on the previous
key's interpolation handle data -- but that will require more work. For now, it at least adds the key to
the correct value instead of duplicating last keys value.

BUG:438917